--- a/src/app/features/pokemons/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/features/pokemons/components/pokemon-list/pokemon-list.component.html
@@ -1,6 +1,6 @@
 <div class="pokemon-list grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-4">
   <app-pokemon-card
-    *ngFor="let pokemon of pokemons"
+    *ngFor="let pokemon of pokemons()"
     [pokemon]="pokemon"
   ></app-pokemon-card>
 </div>
