--- a/src/app/features/pokemons/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/features/pokemons/components/pokemon-list/pokemon-list.component.html
@@ -1,6 +1,21 @@
+<h1 class="text-4xl font-bold">Pokémon List</h1>
+<span> Current Page: {{ currentPage() }} </span>
+<hr class="mt-4 mb-8" />
+
+<div class="text-center text-xl font-semibold" *ngIf="pokemons().length === 0">
+  No Pokémons found
+</div>
+
 <div class="pokemon-list grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-4">
   <app-pokemon-card
     *ngFor="let pokemon of pokemons()"
     [pokemon]="pokemon"
   ></app-pokemon-card>
 </div>
+
+<app-pagination
+  class="text-center my-8 block"
+  [currentPage]="currentPage()!"
+  [totalPages]="totalPages()"
+  (pageChange)="onPageChange($event)"
+></app-pagination>
