add Pokémon detail and evolution components; implement routing and SEO service for enhanced Pokémon information display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <app-navbar></app-navbar>
-<div class="my-4 container mx-auto">
+<div class="my-8 container mx-auto">
   <router-outlet />
 </div>
+<footer>
+  <div class="py-4 text-center text-xs">
+    <p>Pokemon is a trademark of Nintendo. This is a fan-made application.</p>
+  </div>
+</footer>
