--- a/src/app/features/pokemons/components/pokemon-card/pokemon-card.component.html
+++ b/src/app/features/pokemons/components/pokemon-card/pokemon-card.component.html
@@ -1,13 +1,17 @@
 <article
-  class="pokemon-item p-4 border rounded-lg shadow-lg bg-white relative cursor-pointer"
+  class="pokemon-item p-4 border rounded-lg shadow-lg bg-white relative cursor-pointer z-10"
+  (click)="navigateToPokemon()"
 >
   <div
     class="font-semibold rounded-full px-2 py-1 absolute top-0 left-0 text-2xl"
   >
-    #{{ pokemonLeadId() }}
+    {{ pokemonLeadId() }}
   </div>
-  <div class="flex justify-center absolute top-0 right-0">
-    <app-pokemon-cry [pokemonId]="pokemon.id"></app-pokemon-cry>
+  <div class="flex justify-center absolute top-0 right-0 z-50">
+    <app-pokemon-cry
+      [pokemonId]="pokemon.id"
+      (click)="$event.stopPropagation()"
+    ></app-pokemon-cry>
   </div>
   <app-pokemon-image [pokemonId]="pokemon.id"></app-pokemon-image>
   <h3 class="text-xl font-semibold capitalize text-center">
