add catch Pokémon feature with UI components and local storage management

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="my-8 container mx-auto">
+<div class="my-8 container mx-auto px-4 lg:px-0">
   <router-outlet />
 </div>
 <footer>
