--- a/src/app/features/pokemons/components/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/features/pokemons/components/pokemon-detail/pokemon-detail.component.html
@@ -15,15 +15,67 @@
       class="w-full"
     />
   </div>
-  <div class="flex flex-col">
-    <div class="flex flex-row">
+  <div class="flex flex-col relative">
+    <div class="flex justify-between">
       <h1 class="text-3xl font-bold capitalize">
         {{ pokemonLeadId() }} {{ currentPokemon.name }}
       </h1>
+      <app-catch-pokemon
+        pokemonId="{{ currentPokemon.id }}"
+      ></app-catch-pokemon>
     </div>
+    <hr class="border-b-2 border-gray-200 w-full my-2" />
+
+    <div class="flex flex-row">
+      <span
+        ><span class="font-bold">Height:</span>
+        {{ currentPokemon.height }}m</span
+      >
+      <span
+        ><span class="font-bold ml-2">Weight:</span>
+        {{ currentPokemon.weight }}kg</span
+      >
+    </div>
+    <div class="flex flex-col">
+      <span
+        ><span class="font-bold">Base Experience:</span>
+        {{ currentPokemon.base_experience }}</span
+      >
+
+      <span class="mb-4"
+        ><span class="font-bold">Order:</span> {{ currentPokemon.order }}</span
+      >
+
+      <div class="mb-4">
+        <span class="font-bold">Moves:</span>
+        <mat-chip-set aria-label="Moves">
+          @for (item of firstMoves(); track item.move) {
+          <mat-chip>
+            <span class="capitalize">{{ item.move.name }}</span>
+          </mat-chip>
+
+          } @if (currentPokemon.moves.length > 4) {
+          <mat-chip>
+            <span>+{{ currentPokemon.moves.length - 4 }} more</span>
+          </mat-chip>
+          }
+        </mat-chip-set>
+      </div>
+      <div class="mb-4">
+        <span class="font-bold">Abilities:</span>
+        <mat-chip-set aria-label="Abilities">
+          @for (item of currentPokemon.abilities; track item.ability) {
+          <mat-chip>
+            <span class="capitalize">{{ item.ability.name }}</span>
+          </mat-chip>
+          }
+        </mat-chip-set>
+      </div>
+    </div>
+
+    <app-pokemon-evolutions
+      class="mt-8"
+      [pokemonId]="currentPokemon.id"
+    ></app-pokemon-evolutions>
   </div>
 </div>
-
-<app-pokemon-evolutions
-  [pokemonId]="currentPokemon.id"
-></app-pokemon-evolutions>
