--- a/src/app/features/pokemons/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/features/pokemons/components/pokemon-list/pokemon-list.component.html
@@ -10,6 +10,7 @@
   <app-pokemon-card
     *ngFor="let pokemon of pokemons()"
     [pokemon]="pokemon"
+    [showCatchPokemon]="true"
   ></app-pokemon-card>
 </div>
 
